# mini-project-group-9

./: .env.example  .gitignore  README.md  init_db.py  main.py  pubspec.yaml  render.yaml  requirements.txt  run_analytics_schema.py  setup_db.py
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/sub_optimizer/: MainActivity.kt
auth/: routes.py
b1_ingestion/: importer.py  pattern_matcher.py  plaid_client.py  routes.py
b2_analytics/: graph_builder.py  routes.py
b3_payment_service/: database.py  docker-compose.yml  main.py
cpp_engine-P2P/: CMakeLists.txt  settlement_wrapper.py  settlements.cpp
db/: analytics_schema.sql  connection.py  neo4j_connection.py  schema.sql
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/: api_service.dart  theme.dart
lib/state/: app_provider.dart
lib/ui/: main_scaffold.dart
lib/ui/auth/: login_screen.dart
lib/ui/f1_core/: dashboard_tab.dart  kill_switch_screen.dart  virtual_cards_screen.dart
lib/ui/f2_social/: group_detail_screen.dart  split_screen.dart
lib/ui/f3_analytics/: analytics_tab.dart  knowledge_graph_screen.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
